tests/derivation/core/norec part w_ext 001/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Usupported applications to a non-concrete type `ty`

DerivedGen:1
 13 | XShow = %runElab derive
 14 | 
 15 | export
 16 | checkedGen : Fuel -> (Fuel -> Gen MaybeEmpty String) => Gen MaybeEmpty X
 17 | checkedGen = deriveGen
                   ^^^^^^^^^

